@@ -931,6 +931,15 @@ radget_parser (Domain      *domain,
 
 static GData *domains = NULL;
 
+/**
+ * gxk_radget_parse
+ * @domain_name: radget domain name
+ * @file_name:   file containing ragdet definitions
+ * @i18n_domain: i18n domain to translate labels
+ * @error:       #GError location
+ * Parse radget definitions from @file_name. See gxk_radget_create() and
+ * gxk_radget_complete() to make use of the definitions.
+ */
 void
 gxk_radget_parse (const gchar    *domain_name,
                   const gchar    *file_name,
@@ -956,6 +965,16 @@ gxk_radget_parse (const gchar    *domain_name,
     }
 }
 
+/**
+ * gxk_radget_parse_text
+ * @domain_name: radget domain name
+ * @text:        radget definition string
+ * @text_len:    length of @text or -1
+ * @i18n_domain: i18n domain to translate labels
+ * @error:       #GError location
+ * Parse radget definitions from @text. See gxk_radget_create() and
+ * gxk_radget_complete() to make use of the definitions.
+ */
 void
 gxk_radget_parse_text (const gchar    *domain_name,
                        const gchar    *text,
@@ -1660,6 +1679,14 @@ gxk_radget_creator (GxkRadget          *radget,
   return radget_creator (radget, domain_name, name, parent, call_args, env_args);
 }
 
+/**
+ * gxk_radget_create
+ * @domain_name:        radget domain
+ * @name:               radget definition name
+ * @...:                %NULL terminated list of variable (name, value) strings pairs
+ * Create the radget (#GtkWidget or #GObject) defined as @name within @domain,
+ * using the variable bindings as defined in the @... paired string list.
+ */
 GxkRadget*
 gxk_radget_create (const gchar        *domain_name,
                    const gchar        *name,
@@ -1679,6 +1706,16 @@ gxk_radget_create (const gchar        *domain_name,
   return radget;
 }
 
+/**
+ * gxk_radget_complete
+ * @radget:             toplevel ragdet container
+ * @domain_name:        radget domain
+ * @name:               radget definition name
+ * @...:                %NULL terminated list of variable (name, value) strings pairs
+ * Create the children/contents of the radget defined under @name within @domain
+ * as part of the container object passed in as @radget,
+ * using the variable bindings as defined in the @... paired string list.
+ */
 GxkRadget*
 gxk_radget_complete (GxkRadget          *radget,
                      const gchar        *domain_name,
@@ -1698,6 +1735,13 @@ gxk_radget_complete (GxkRadget          *radget,
   return radget;
 }
 
+/**
+ * gxk_radget_get_domain
+ * @radget:     a valid radget
+ * @RETURNS:    radget domain
+ * Return the domain within which the definition was found @radget
+ * was created from.
+ */
 const gchar*
 gxk_radget_get_domain (GxkRadget *radget)
 {
@@ -1725,6 +1769,14 @@ gxk_radget_sensitize (GxkRadget      *radget,
     }
 }
 
+/**
+ * gxk_radget_find
+ * @radget:     a valid radget
+ * @name:       radget name
+ * @RETURNS:    radget named @name or %NULL
+ * Recursively find the radget named @name within the container radget @radget.
+ * The @name may consist of a list of parent radget names, seperated by a dot '.'.
+ */
 gpointer
 gxk_radget_find (GxkRadget      *radget,
                  const gchar    *name)
@@ -1750,6 +1802,13 @@ gxk_radget_find (GxkRadget      *radget,
   return radget;
 }
 
+/**
+ * gxk_radget_find_area
+ * @radget:     a valid radget
+ * @area:       radget name
+ * @RETURNS:    radget named @name or %NULL
+ * Recursively find the radget named @name within the container radget @radget.
+ */
 gpointer
 gxk_radget_find_area (GxkRadget      *radget,
                       const gchar    *area)
@@ -1767,6 +1826,13 @@ gxk_radget_find_area (GxkRadget      *radget,
   return radget;
 }
 
+/**
+ * gxk_radget_add
+ * @radget:     a valid radget
+ * @area:       radget name
+ * @widget:     valid #GtkWidget
+ * Add the unparanted widget @widget to @radget within area @area.
+ */
 void
 gxk_radget_add (GxkRadget      *radget,
                 const gchar    *area,
